<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mrsu.medrm.view.OrderPrepareFragment">

    <!-- TODO: Update blank fragment layout -->


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/hospital_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hospital_label"
        android:layout_marginTop="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/service_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginRight="10dp"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/doctor_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/date_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginRight="10dp"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/time_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginRight="10dp"
        app:met_floatingLabel="normal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/order_create_button"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="20dp"
            android:id="@+id/finish_button" />
    </FrameLayout>


</LinearLayout>
